k8s-apps/infra/cilium/networking/gateway-ipv4.yaml
# gateway-ipv4.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway-ipv4
  namespace: default
spec:
  gatewayClassName: cilium
  addresses:
  - type: IPAddress
    value: "192.168.0.69"
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
