k8s-apps/infra/cilium/networking/httproute-hubble.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui-route
  namespace: kube-system
spec:
  parentRefs:
    - name: public-gateway-ipv4
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: default
  hostnames:
    - "hubble.aesthar.com.br"
  rules:
    - backendRefs:
      - name: hubble-ui
        group: ''
        kind: Service
        port: 80
        weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
